--- a/pom.xml
+++ b/pom.xml
@@ -5,16 +5,29 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>iec-analysis</groupId>
-    <artifactId>analysis</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>iec</artifactId>
+    <packaging>pom</packaging>
+    <version>2.0</version>
+    <modules>
+        <module>iec_interaction</module>
+        <module>iec_analysis</module>
+    </modules>
 
-    <!--    引入junit,使用单元测试-->
-    <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-        </dependency>
-    </dependencies>
+    <properties>
+        <java.version>1.8</java.version>
+    </properties>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
